--- a/test/mocha/index.html
+++ b/test/mocha/index.html
@@ -9,7 +9,7 @@
     <div id="mocha"></div>
     <script src="../../index.js"></script>
 
-    <script src="../../vendor/assert.js"></script>
+		<script src="../../vendor/chai/chai.js"></script>
     <script src="../../vendor/mocha/mocha.js"></script>
     <script>mocha.setup('bdd')</script>
 
