--- a/test/mocha/index.html
+++ b/test/mocha/index.html
@@ -9,11 +9,12 @@
     <div id="mocha"></div>
     <script src="../../index.js"></script>
 
-		<script src="../../vendor/chai/chai.js"></script>
     <script src="../../vendor/mocha/mocha.js"></script>
-    <script>mocha.setup('bdd')</script>
-
+    <script src="../../vendor/chai/chai.js"></script>
     <script>
+      mocha.setup('bdd');
+      var expect = chai.expect;
+
       if (location.href.indexOf('://localhost:7357') != 1) {
         document.write('<script src="/testem.js">' + '<\/' + 'script>');
       }
